src/test/deca/context/invalid/created/decl_var/decl_virgule.deca
// Description :
//    test d'une déclaration de variable déjà existante
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 9: (3.17)  La variable x est déjà déclarée.

{
	int x, x, x;
}